--- a/index.html
+++ b/index.html
@@ -20,3 +20,28 @@
             </div>
         </div>
     </header>
+    <div class="container mt-4">
+        <div class="row">
+            <div class="col-12" id="mealContainer">
+                
+                <div class="row" id="mealRow">
+                
+                </div>
+            </div>
+        </div>
+        <div class="row justify-content-center mt-3" id="showAllRow" style="display: none;">
+            <div class="col-12 text-center">
+                <button class="btn btn-secondary " id="showAllBtn">SHOW ALL</button>
+            </div>
+        </div>
+    </div>
+
+    <footer class="bg-dark text-white py-3 mt-5">
+        <div class="container text-center">
+            &copy; 2024 Meal Search
+        </div>
+    </footer>
+
+    <script src="script.js"></script>
+</body>
+</html>
