--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Meal Search</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header class="bg-dark text-white py-4">
