--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header class="bg-dark text-white py-4">
         <div class="container">
-            <h1 class="text-center" style="background: linear-gradient(to right, #ffb6c1, #87ceeb); -webkit-background-clip: text; -webkit-text-fill-color: transparent; margin-bottom: 15px;">Meal Search</h1>
+            <h1 class="text-center" style="background: linear-gradient(to right, #b0c212, #41028f); -webkit-background-clip: text; -webkit-text-fill-color: transparent; margin-bottom: 15px;">Meal Search</h1>
             <div class="input-group">
                 <input type="text" id="searchInput" class="form-control" placeholder="Search for a meal...">
                 <div class="input-group-append">
